# project_tracking_cli

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: Sync-dev-with-main.yml  Tag-and-Release.yml  Update-Version-and-create-Realeases-PR.yml
pt_cli/: __version__.py  cli.py  connect.py  connect.yaml  parser.py  pt_cli.py  tools.py
