[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pt_cli"
version = "0.0.1"
authors = [
  { name="P-O Quirion", email="po.quirion@mcgill.ca" },
  { name="Paul Streteowich", email="paul.stretenowich@mcgill.ca" },
]
description = "python client for the DB to track C3G assembler"
readme = "README.md"
requires-python = ">=3.10.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.28",
    "beautifulsoup4>=4.12",
    "lxml",
    "shtab",
]

[project.scripts]
pt-cli =  "pt_cli.cli:main"


[project.urls]
"Homepage" = "https://github.com/C3G/pt_cli"
"Bug Tracker" = "https://github.com/pypa/pt_cli/issues"
