[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "pt_cli"
dynamic = ["version"]
authors = [
  { name="P-O Quirion", email="po.quirion@mcgill.ca" },
  { name="Paul Streteowich", email="paul.stretenowich@mcgill.ca" },
]
description = "python client for the DB to track C3G assembler"
readme = "README.md"
requires-python = ">=3.10.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.28",
    "beautifulsoup4>=4.12",
    "html5lib",
    "shtab",
]

[project.scripts]
pt-cli =  "pt_cli.cli:main"

[project.urls]
"Homepage" = "https://github.com/C3G/pt_cli"
"Bug Tracker" = "https://github.com/pypa/pt_cli/issues"

[tool.pdm]
allow-direct-references = true

[tool.pdm.version]
source = "file"
path = "pt_cli/__version__.py"
# source = "scm"
# version_format = "pt_cli.version:format_version"
# write_to = "pt_cli/__version__.py"
# write_template = "__version__ = '{}'"
# tag_filter = "main/*"
# tag_regex = "^main/.*([0-9].[0-9].[0-9])$"